# llumux

./: .gitignore  README.md  pyproject.toml  requirements.txt  sources.txt  todo.txt
config/: default_finetuning_args.yml  example_pipeline.yml  llm_instruct_models.yml
config/model_hubs/: example_model_hub.yml  llm_instruct.yml  prompt_embedders.yml
config/pipelines/: example_flr_dataset.yml  example_llumux_dataset.yml  example_load_from_disk.yml  example_pipeline.yml
config/test_pipelines/: test.yml  test_general_scorer.yml  test_listwise_scorer.yml  test_pairwise_scorer.yml  test_pointwise_scorer.yml
examples/: example_pairwise.py  example_pipeline.py  example_router.py  finetune.py  flr_example.py  flr_example_complexity.py  flr_example_dataset.py  flr_example_general.py  flr_example_listwise.py  flr_example_mf.py  flr_example_model_hub.py  flr_example_pairwise.py  flr_example_pipeline.py  flr_example_pointwise.py  flr_example_router.py  old_example.py  test_model.py  utils.py
examples/example_llumux_dataset/: train.json  validation.json
experimental/: pyproject.toml
experimental/cursor_code/: README.md  requirements.txt
experimental/cursor_code/examples/: trained_scorer_usage.py
experimental/cursor_code/src/api/: __init__.py  main.py
experimental/cursor_code/src/metrics/: performance.py
experimental/cursor_code/src/models/: __init__.py  llm_config.py  scorer.py
experimental/cursor_code/src/router/: __init__.py
experimental/cursor_code/tests/: test_router.py
experimental/examples/: basic_usage.py
experimental/prompt_portfolio/: mf.py
experimental/src/: __init__.py
experimental/src/metrics/: __init__.py
experimental/src/models/: recommendation.py
experimental/src/router/: llm_router.py
flr/: dataset.py  evaluator.py  evaluator_args.py  losses.py  pipeline.py  router_evaluator.py  router_evaluator_args.py  trainer.py  trainer_args.py
flr/callbacks/: __init__.py  base_callback.py  checkpoint_saver.py  checkpointing.py  loss_tracker.py
flr/datasets/: __init__.py  base_dataset.py  listwise_dataset.py  pairwise_dataset.py  pointwise_dataset.py  preprocessed_pairwise_dataset.py  prompt_complexity_dataset.py  route_dataset.py  router_dataset.py  text_complexity_dataset.py
flr/hub/: model_card.py  model_hub.py
flr/losses/: __init__.py  list_mle.py  pairwise_cross_entropy.py  pairwise_logistic_loss.py
flr/profiler/: complexity_pred.py
flr/prompt_portfolio/: binary_matrix.py  kmedoids.py  mf.py
flr/routers/: base_router.py  constant_router.py  ratio_router.py
flr/scorers/: __init__.py  base_scorer.py  general_scorer.py  listwise_scorer.py  matrix_factorization_scorer.py  pairwise_scorer.py  pointwise_scorer.py
flr/utils/: __init__.py  checkpointing.py  constants.py  loss_tracker.py
llumux/: __init__.py  pipeline.py  router_evaluator.py
llumux/callbacks/: checkpoint_saver.py  loss_tracker.py
llumux/datasets/: __init__.py  base_dataset.py  listwise_dataset.py  pairwise_dataset.py  pointwise_dataset.py  preprocessed_pairwise_dataset.py  router_dataset.py
llumux/hub/: __init__.py  model_hub.py
llumux/losses/: list_mle.py  pairwise_cross_entropy.py
llumux/routers/: __init__.py  base_router.py  constant_router.py  greedy_router.py  random_router.py  ratio_router.py
llumux/scorers/: __init__.py
llumux/utils/: __init__.py  parse_args.py
lmarena-ai/arena-human-preference-55k-preprocessed-test/: state.json
lmarena-ai/arena-human-preference-55k-preprocessed-train/: dataset_info.json  state.json
scripts/: run_pipeline.py
(+8 files in other folders)
