[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-llm-routing"
version = "0.1.0"
description = "A sophisticated API service that provides intelligent routing recommendations for Large Language Models (LLMs)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["llm", "routing", "api", "machine-learning", "nlp"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "anthropic>=0.5.0",
    "cohere>=4.32",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "scikit-learn>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/fast-llm-routing"
Documentation = "https://github.com/yourusername/fast-llm-routing#readme"
Repository = "https://github.com/yourusername/fast-llm-routing.git"
"Bug Tracker" = "https://github.com/yourusername/fast-llm-routing/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # Line length is handled by black

[project.scripts]
llm-router = "src.api.main:app" 